# StrappedTemplates

./: .travis  .travis.yml  Main.hs  README.md  StrappedTemplates.cabal  blazeBench.hs  heistIntepreted.hs
Strapped/: Parser.hs  Render.hs  Types.hs  Utils.hs
benchmarks/: heistInterpreted.hs  mako_test.py  strapped.hs
benchmarks/heist/: loop.tpl
benchmarks/strapped/: base.strp  big.strp
benchmarks/strapped/includes/: includes.strp
benchmarks/strapped_templates/: README.strp  StrappedTemplates.cabal.strp  base.strp  base_simple.strp  big-complex.strp  big-simple.strp  big.strp
examples/: base_example.hs  big_example.hs  custom_parser.hs  example.hs  make_readme.hs
examples/templates/: README.strp  StrappedTemplates.cabal.strp  base.strp  base_simple.strp  big-complex.strp  big-simple.strp
heist/: loop.tpl
src/Text/: Strapped.hs
src/Text/Strapped/: Parser.hs  Render.hs  Types.hs  Utils.hs
templates/: big.strp
tests/: StrappedTest.hs
