name:                StrappedTemplates
version:             0.0.1.0
synopsis:            General purpose templates in haskell
homepage:            https://github.com/hansonkd/StrappedTemplates
license:             BSD3
license-file:        LICENSE
author:              Kyle Hanson
maintainer:          hanooter@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.Strapped, Text.Strapped.Parser, Text.Strapped.Render, Text.Strapped.Types, Text.Strapped.Utils
  build-depends:       base ==4.6.*, 
                       text ==0.11.*, 
                       blaze-builder ==0.3.*,
                       parsec ==3.1.*,
                       mtl ==2.1.*,
                       transformers ==0.3.*,
                       filemanip ==0.3.*,
                       filepath ==1.3.*
  hs-source-dirs:      src
  