name:                StrappedTemplates
version:             0.0.2.0
synopsis:            General purpose templates in haskell
homepage:            https://github.com/hansonkd/StrappedTemplates
license:             BSD3
license-file:        LICENSE
author:              Kyle Hanson
maintainer:          hanooter@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.Strapped, Text.Strapped.Parser, Text.Strapped.Render, Text.Strapped.Types, Text.Strapped.Utils
  build-depends:       base >= 4.7 && < 4.8, 
                       text >= 1.0 && < 1.2, 
                       blaze-builder >=0.3 && < 0.4,
                       parsec >=3.1 && < 3.2,
                       mtl >=2.1 && < 2.3,
                       transformers >= 0.4 && < 0.5,
                       filemanip >=0.3.6 && < 0.3.7,
                       filepath >=1.3 && < 1.4
  hs-source-dirs:      src
  